--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon server.js",
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
-    "start": "node server.js"
+    "start": "node server.js",
+    "deploy": "npm run build && npm start"
   },
   "dependencies": {
     "express": "^4.18.2",
